--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="CSS/style.css">
     <script src="JS/calculator.js" defer></script>
+
+    <!-- Use Google Fonts to make it more fancy! -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,9 +19,10 @@
     <main>
         <div class="calculator">
             <div class="display">
+
             </div>
             <div class="numbers">
-                
+
             </div>
         </div>
     </main>
