Create skeleton template for adding numbers to each row

--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
                 <p>100</p>
             </div>
             <div class="numbers">
+                <div class="row">
+                    
+                </div>
+                <div class="row">
 
+                </div>
+                <div class="row">
+                    
+                </div>
+                <div class="row">
+
+                </div>
             </div>
         </div>
     </main>
