--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             </div>
             <div class="numbers">
                 <div class="row">
-                    
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>+</button>
                 </div>
                 <div class="row">
 
