Add icon for web tab

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" href="IMG/calculator-icon.png">
     <script src="JS/calculator.js" defer></script>
 
     <!-- Use Google Fonts to make it more fancy! -->
